# simplex

./: .gitignore  Cargo.toml  LICENSE
src/: ast.rs  basic_block.rs  block.rs  bool_value.rs  boolean_value.rs  cache.rs  compiler.rs  constant.rs  definition.rs  definitions.rs  errors.rs  expression.rs  expression_translator.rs  expressions.rs  float_type.rs  float_value.rs  function.rs  function_argument.rs  function_builder.rs  function_signature.rs  function_translator.rs  function_type.rs  function_value.rs  grammar.lalrpop  instruction.rs  integer.rs  integer_expression.rs  integer_type.rs  integer_value.rs  main.rs  module.rs  module_builder.rs  module_translator.rs  namespace.rs  parser.lalrpop  parser.rs  scope.rs  statement.rs  statement_translator.rs  statements.rs  (+7 more)
src/backend/: basic_block_compiler.rs  expression_compiler.rs  expression_translator.rs  function_compiler.rs  function_translator.rs  integer_expression.rs  mod.rs  module_compiler.rs  module_translator.rs  statement_translator.rs  type_compiler.rs  type_translator.rs
src/backend/codegen/: integer_ops.rs  mod.rs
src/backend/types_impl/: integer.rs  mod.rs
src/definitions/: function.rs  mod.rs
src/expression/: integer.rs  mod.rs
src/expressions/: binary_operation.rs  constant.rs  mod.rs  unary_operation.rs
src/parser/: grammar.lalrpop  mod.rs
src/statements/: compound.rs  local_scope.rs  mod.rs  variable.rs
src/types/: float.rs  function.rs  integer.rs  mod.rs
src/values/: mod.rs
