[package]
name = "simplex"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
intrusive-collections = "0.9.7"
slotmap = "1.0.7"
thiserror = "1.0.58"

[dependencies.inkwell]
version = "0.5.0"
features = ["llvm18-0-prefer-dynamic"]

[dependencies.lalrpop-util]
version = "0.22.1"
features = ["lexer", "unicode"]

[build-dependencies]
lalrpop = "0.22.1"
