[package]
name = "simplex"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
thiserror = "2.0.18"

[dependencies.inkwell]
version = "0.5.0"
features = ["llvm18-0-prefer-dynamic"]

[dependencies.lalrpop-util]
version = "0.23.1"
features = ["lexer", "unicode"]

[build-dependencies]
lalrpop = "0.23.1"
